cdk-rancher.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rancher
  name: rancher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rancher
        ima: pod
    spec:
      containers:
      - image: rancher/server:preview
        imagePullPolicy: Always
        name: rancher
        volumeMounts:
        - name : kubeconfig
          mountPath: "/etc/kubernetes/"
          readOnly: true
        ports:
        - containerPort: 80
          hostPort: 8080
          protocol: TCP
        - containerPort: 443
          hostPort: 8081
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 30
        resources: {}
      volumes:
         - name: kubeconfig
           secret:
            secretName: kubeconfig
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rancher
  labels:
    app: rancher
spec:
  ports:
    - port: 80
      name: rancher-http
      protocol: TCP
      targetPort: 8080
    - port: 443
      name: rancher-https
      protocol: TCP
      targetPort: 8081
  selector:
    app: rancher
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: rancher
spec:
 rules:
   - host: rancher.34.244.44.16.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: rancher
             servicePort: 80
         - path: /
           backend: 
             serviceName: rancher
             servicePort: 443
